# registry

./: .gitignore  Anchor.toml  Makefile  README.md  package-lock.json  package.json
app/: cli.js  utils.js
github-oracle/: .gitignore  Makefile  index.js  oracle_test_keypair.json  package-lock.json  package.json
migrations/: deploy.js
programs/registry/: Cargo.toml
programs/registry/src/: lib.rs
tests/: registry-program.js  registry.js
