[package]
name = "registry"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "registry"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
local_test = []
default = []

[dependencies]
anchor-lang = "0.16.1"
borsh = "0.9.1"
borsh-derive = "0.9.1"
cfg-if = "1.0.0"
